<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>


    <string name="action_settings">Settings</string>
    <string name="action_map">Action Map</string>
    <string name="action_share">Share</string>
    <string name="refresh">Refresh</string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="pref_temperature_units_label">Temperature Units</string>
    <string name="pref_temperature_units_key" translatable="false">temperature_units</string>
    <string name="pref_temperature_units_default" translatable="false">metric</string>
    <string-array name="pref_temperature_units_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="pref_temperature_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

</resources>
